[package]
name = "wiz-light-manager"
version = "0.1.0"
authors = ["fpalacios"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = "3.0.0-beta.2"